methods.picture.PictureMono1.scala.code
override def run() {
  avance(2)
  FaireV()
  avance(2)
  gauche()
}

def Marquer(){
  baisseBrosse()
  leveBrosse()
}
def FaireV(){
 	Marquer()
  avance()
  gauche()
  avance()
  Marquer()
  droite()
  avance()
  droite()
  avance()
  Marquer()
  gauche()
}

for(i <-0 to 3){
  override def run()
}